2.3.0 (09-10-2024)
- Refactor: Adds system field to AccessControlProfile entity and marks the locked field's getters and setters as deprecated [#qubIT-Omnis-6980]

2.2.0 (07-10-2024)
- Refactor: Removes locked field from AccessControlPermission entity [#qubIT-Omnis-6964]

2.1.1 (02-09-2024)
- Improvement: Upgrades parent [#qubIT-Omnis-6687]

2.1.0 (02-09-2024)
- Improvement: Ensures Release Notes is in the jar [#qubIT-Omnis-6579]
- Improvement: Updates guava from 21.0 to 33.2.1-jre [#qubIT-Omnis-5869]

2.0.0 (17-06-2024)
- Improvement: Updates foundation core api version to 7.0.0 [#qubIT-Omnis-4737]

1.9.0 (27-01-2023)
- Improvement: Implementing access control interfaces of OMNIS.cloud platform

1.8.2 (19-03-2021)
- Bug fix: Fixed update object cache when changing class or provider strategy

1.8.1 (22-02-2021)
- Bug fix: Fixed update object cache when profile is deleted

1.8.0 (22-02-2021)
- New feature: Added object-profile cache to improve performance

1.7.1 (15-02-2021)
- Bug fix: Fixed bug in contains object
- Bug fix: Fixing SpotBugs issue (SE_BAD_FIELD)

1.7.0 (11-02-2021)
- Improvement: Improved check if profile contains object due to performance issues
- Improvement: Added soft reference to access control profile parsed objects

1.6.3 (22-12-2020)
- Bug fix: Fixed add parent profile to prevent cicle

1.6.2 (18-11-2020)
- Bug fix: Verify custom expression and custom expression validator to checkrules 

1.6.1 (22-10-2020)
- Bug fix: Fixed objects cleaning form profiles

1.6.0 (22-07-2020)
- Refactor: Moved strategies to access-control-management
- Bug fix: General bug fix
- Bug fix: Fixed read outside of an read transaction

1.5.0 (23-06-2020)
- Improvement: Added flag to check if permission and profile are auto generated

1.4.1 (22-05-2020)
- Bug fix: Fix NPE when verifying if a object is in profile without objects association

1.4.0 (21-05-2020)
- New Feature: Profile association with any object

1.3.1 (12-05-2020)
- Bug fix: Fixed permissions delete
