@@ -1,4 +1,9 @@
 package com.qubit.terra.qubAccessControl.domain;
+valueType com.qubit.terra.framework.tools.primitives.LocalizedString as QubAccessControlLocalizedString {
+	externalizeWith {
+		String toString();
+	}
+}
 external class .pt.ist.fenixframework.DomainRoot;
 
 class AccessControlProfileType  {
@@ -7,6 +12,7 @@ class AccessControlProfileType  {
 class AccessControlProfile  {
  String rawName (REQUIRED) ; 
  String code  (REQUIRED) ;
+ QubAccessControlLocalizedString description ;
  Boolean restricted (REQUIRED) ; 
  Boolean locked ; // Deprecated
  Boolean system ;
@@ -20,6 +26,7 @@ class AccessControlProfile  {
 class AccessControlPermission  {
  String code  (REQUIRED) ; 
  String rawName (REQUIRED) ; 
+ QubAccessControlLocalizedString description ;
  Boolean restricted (REQUIRED) ; 
  Boolean autoGenerated;
 }
